Missing data and Overlap issues when Project name is too long (#772)

--- a/cla-frontend-corporate-console/src/ionic/modals/view-cla-managers-modal/view-cla-managers-modal.scss
+++ b/cla-frontend-corporate-console/src/ionic/modals/view-cla-managers-modal/view-cla-managers-modal.scss
@@ -5,3 +5,7 @@ ion-label {
     white-space: normal;
   }
 }
+
+.project-name {
+  color: #4c79b6;
+}
